--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -32,95 +32,9 @@
             </kt-alert> -->
             <div class="row">
 
-<!--                <div class="col-lg-4">-->
-<!--                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
-<!--                        <mat-label class="customMatLabel">Zone</mat-label>-->
-<!--                        <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" disabled="true">-->
-<!--                            <mat-option [value]="SelectedZone.ZoneId">-->
-<!--                                {{SelectedZone.ZoneName}}-->
-<!--                            </mat-option>-->
-<!--                        </mat-select>-->
-<!--                    </mat-form-field>-->
-<!--                </div>-->
 
-<!--                <div class="col-lg-4 ">-->
-<!--                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
-<!--                        <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>-->
-<!--                        <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" disabled="true">-->
-<!--                            <mat-option [value]="SelectedBranch.BranchCode">-->
-<!--                                {{SelectedBranch.Name}}-->
-<!--                            </mat-option>-->
-<!--                        </mat-select>-->
-<!--                    </mat-form-field>-->
-<!--                </div>-->
-                <div class="col-lg-3 col-sm-12">
-                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
-                            <mat-label class="customMatLabel">Zone</mat-label>
-                            <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
-                                <mat-option [value]="SelectedZones?.ZoneId">
-                                    {{SelectedZones?.ZoneName}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="!single_zone">
-                            <mat-label class="customMatLabel">Zone</mat-label>
-                            <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
-                                        (selectionChange)="changeZone($event)">
-                                <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
-                                            [disabled]="disable_zone">
-                                    {{zone?.ZoneName}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-12" >
-
-                    <div class="col-md-12 kt-margin-bottom-10-mobile">
-
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="!single_branch" >
-                                <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-                                <mat-select [(ngModel)]="selected_b" formControlName="BranchId" [disabled]="disable_branch"
-                                            (selectionChange)="changeBranch($event)"
-                                            *ngIf="!single_branch">
-                                    <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
-                                    >
-                                        {{branch?.Name}}
-                                    </mat-option>
-                                </mat-select>
-                                <mat-select [(ngModel)]="selected_b" formControlName="BranchId" [disabled]="disable_branch"
-                                            *ngIf="single_branch">
-                                    <mat-option [value]="SelectedBranches?.BranchCode"
-                                    >
-                                        {{SelectedBranches?.Name}}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-
-                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_branch" >
-                                <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong>
-                                </mat-label>
-                                <mat-select [(ngModel)]="selected_b" formControlName="BranchId" disabled="true">
-                                    <mat-option [value]="SelectedBranches.BranchCode">
-                                        {{SelectedBranches.Name}}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </div>
-                    </div>
-                </div>
-                <!-- <div class="col-lg-2 " *ngIf="!hide">
-                  <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                    <mat-label class="customMatLabel">Circle</mat-label>
-                    <mat-select formControlName="CircleId">
-                      <mat-option *ngFor="let circle of SelectedCircle" [value]="circle.Id">
-                        {{circle.CircleCode}}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-              </div> -->
+                <app-zone-branch-circle [form]="ndcForm" [should_show_circle]="false"
+                                        (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
 
                 <div class="col-lg-3 ">
