--- a/src/app/modules/borrower-information/borrower-information.component.html
+++ b/src/app/modules/borrower-information/borrower-information.component.html
@@ -1,14 +1,18 @@
 <div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
 
 
-    <div class="row py-3">
+    <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
             <div class="heading">Borrower Information</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center mt-2">
             <p class="text-right">
-                <button class="  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button" color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon class="mr-2">filter_list</mat-icon> Advance Filter
+                <button class="mt-2  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                        color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                        aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
+                    <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
+                    Advance Filter
                 </button>
               </p>
         </div>
@@ -18,7 +22,7 @@
 
 
 
-      <div class="collapse" id="collapseExample">
+      <div class="collapse show" id="collapseExample">
         <div class="card card-body">
     <!-- Header -->
     <div  [formGroup]="borrowerForm">
@@ -52,10 +56,10 @@
 
 
 
-            <div>
+            <div class="mx-2">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
 
-                    <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" class=" bg-gray-500 mat-primary" mat-raised-button color="accent"
+                    <button  class=" mt-2 bg-gray-500 mat-primary" mat-raised-button color="accent"
                             type="button" (click)="getBorrower()">
                         <mat-icon class="mr-2">search</mat-icon>
                         Search
