--- a/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
@@ -1,5 +1,5 @@
 <div class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
-    <div class="row py-3">
+    <div class="row pt-3">
       <div class="col-lg-12 col-sm-12">
           <div class="heading">Add Update Benchmarking</div>
       </div>
@@ -8,28 +8,27 @@
 
     <div [formGroup]="addUpdateBenchMarkForm">
 
+      <div class="flex" style="flex-wrap: wrap;">
 
-      <div class="row ">
           <app-zone-branch-circle [form]="addUpdateBenchMarkForm" [should_show_circle]="true"
                                   (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
           <input matInput hidden formControlName="CircleCode" />
-      <div class="col-lg-3 col-sm-12">
-        <div>
+          <div class="mx-2">
+            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Village Name<strong class="matMandatory">*</strong></mat-label>
               <input matInput placeholder="Enter Village Name'" formControlName="VillageName" />
             </mat-form-field>
           </div>
         </div>
-      </div>
 
 
-      <div class="row">
 
-        <div class="col-lg-3 col-sm-12">
 
-          <div>
+
+        <div class="mx-2">
+          <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">No. of Farmer<strong class="matMandatory">*</strong></mat-label>
               <input matInput placeholder="Enter No. of Farmer" formControlName="NoOfFarmer" autocomplete="off" appNumberOnly />
@@ -60,24 +59,24 @@
 <!--        </div>-->
           <input matInput hidden formControlName="Id" />
 
-          <div class="col-lg-3 col-sm-12">
-          <div>
+          <div class="mx-2">
+            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">MaleCount<strong class="matMandatory">*</strong></mat-label>
               <input matInput placeholder="Enter MaleCount Population" formControlName="MaleCount" autocomplete="off" appNumberOnly />
             </mat-form-field>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-12">
-          <div>
+        <div class="mx-2">
+          <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">FemaleCount<strong class="matMandatory">*</strong></mat-label>
               <input matInput placeholder="Enter FemaleCount Population" formControlName="FemaleCount" autocomplete="off" appNumberOnly />
             </mat-form-field>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-12">
-          <div>
+        <div class="mx-2">
+          <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">TransGenderCount<strong class="matMandatory">*</strong></mat-label>
               <input matInput placeholder="Enter TransGenderCount Population" formControlName="TransGenderCount" autocomplete="off" appNumberOnly />
@@ -85,20 +84,20 @@
           </div>
         </div>
 
-      </div>
 
 
-      <div class="row">
-        <div class="col-lg-3 col-sm-12">
-          <div>
+
+        <div class="mx-2">
+          <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Farm Size<strong class="matMandatory">*</strong></mat-label>
               <input matInput placeholder="Enter Farm Size" formControlName="FarmSize" autocomplete="off" appNumberOnly />
             </mat-form-field>
           </div>
         </div>
-
-          <div *ngIf="farmSizeForVillageWise" class="col-lg-3 col-sm-12">
+        <div class="mx-2">
+          <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+          <div *ngIf="farmSizeForVillageWise" class="col-lg-12 col-sm-12">
               <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                   <mat-label>Select Farm Size Unit</mat-label>
                   <mat-select formControlName="FarmSizeUnit">
@@ -111,17 +110,18 @@
                   </mat-select>
               </mat-form-field>
           </div>
-
-        <div class="col-lg-3 col-sm-12">
-          <div>
+</div>
+</div>
+<div class="mx-2">
+  <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Average Loan Size<strong class="matMandatory">*</strong></mat-label>
               <input matInput placeholder="Enter Average Loan Size" formControlName="AverageLoanSize" autocomplete="off" appNumberOnly />
             </mat-form-field>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-12">
-          <div>
+        <div class="mx-2">
+          <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Subsistence Farmer</mat-label>
               <input matInput placeholder="Enter Tour Subsistence Farmer" formControlName="SubsistenceFarmer" autocomplete="off" appNumberOnly />
@@ -129,37 +129,37 @@
           </div>
         </div>
 
-        </div>
-          <div>
-            <div class="row">
-              <div class="col-lg-3 col-sm-12">
-                <div>
+
+
+
+              <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                   <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                     <mat-label class="customMatLabel">Economic Farmer</mat-label>
                     <input matInput placeholder="Enter Tour Economic Farmer" formControlName="EconomicFarmer" autocomplete="off" appNumberOnly />
                   </mat-form-field>
                 </div>
               </div>
-              <div class="col-lg-3 col-sm-12">
-                <div>
+              <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                   <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                     <mat-label class="customMatLabel">Big Farmers</mat-label>
                     <input matInput placeholder="Enter Big Farmers" formControlName="BigFarmers" autocomplete="off" appNumberOnly />
                   </mat-form-field>
                 </div>
               </div>
-
-              <div class="col-lg-3 col-sm-12">
+              <div class="mx-2">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Agri Business Potential</mat-label>
               <input matInput maxlength="200" placeholder="Enter Agri Business Potential" formControlName="AgriBusinessPotential" autocomplete="off" />
             </mat-form-field>
           </div>
+</div>
 
-          <div>
-          </div>
 
-    </div>
+
+</div>
 
     <div class="mt-2 justify-content-end text-right border-t py-4" >
         <button mat-raised-button color="primary"   *ngIf="isAdd && !updatingCase" class="mr-4" (click)="Add()"><mat-icon class="mr-2">add_circle</mat-icon>Add</button>
@@ -224,6 +224,6 @@
           </div>
       </div>
 
-</div>
+
     </div>
 </div>
